# smartBILL

./: QUICK_VPS_FIX.md  README.md  SECURITY_AUDIT.md  VPS_DEPLOYMENT_GUIDE.md  create_client_user.py  database_schema.md  debug_qr_endpoint.py  extracted_code.txt  get_latest_id.py  mini_gen_url.py
backend/: .env.production  add_challan_column.py  add_col.py  add_party_rate.py  admin.py  backfill_ids.py  build_desktop.py  check_admin.py  check_db.py  check_db_direct.py  check_password.py  check_plans.py  check_user.py  check_user_pg.py  cleanup_backups.py  create_admin.py  create_super_admin.py  debug_dump.sql  debug_ids.py  debug_log.txt  debug_notification.py  fix_challan_constraint.py  fix_production_db.py  fix_profiles.py  fix_salary_advance_timestamps.py  init_prod_db.py  main.py  migrate_docs.py  migrate_employee_changes.py  migrate_payroll_v2.py  passenger_wsgi.py  pyproject.toml  replace_pdf_media_type.py  requirements.txt  resequence_ids.py  restore_pdf_media.py  test_api.py  test_ip.py  test_pdf.py  test_playwright.py  (+5 more)
backend/alembic/: env.py
backend/app/: client_dependencies.py  main.py
backend/backups/: auto_backup_20260108_095245.sql  manual_backup_20260105_155358.sql  manual_backup_20260108_093146.dump  manual_backup_20260108_100137.dump  manual_backup_20260108_123055.dump  manual_backup_20260108_145041.dump
backend/scripts/: __init__.py  add_delivery_challan_index.py  add_grn_column.py  add_grn_pg.py  add_logo_column.py  add_party_challan_index.py  debug_employees_schema.py  debug_salary.py  fix_delivery_challan_constraint.py  fix_user_roles.py  (+6 more)
(+335 files in other folders)
