[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==3.2.2",
    "fastapi[standard]>=0.127.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "num2words>=0.5.14",
    "passlib[bcrypt]==1.7.4",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.7",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "weasyprint>=67.0",
]
